--- a/poem.rmd
+++ b/poem.rmd
@@ -16,8 +16,15 @@ you, if you change any of this the git program will notice it and compromise you
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
 
+
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
+It was long I lay
+Awake that night
+Wishing that night
+Would name the hour
+And tell me whether
+To call it day
 
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
