--- a/poem.rmd
+++ b/poem.rmd
@@ -24,3 +24,16 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+poet Maya Angelou #1 on top 500 poets Poet's PagePoemsQuotesCommentsStatsE-BooksBiographyVideosShare on FacebookShare on Twitter
+Poems by Maya Angelou : 15 / 53 « prev. poem next poem »
+Insomniac - Poem by Maya Angelou
+
+Autoplay next video
+There are some nights when
+sleep plays coy,
+aloof and disdainful.
+And all the wiles
+that I employ to win
+its service to my side
+are useless as wounded pride,
+and much more painful. 
